--- a/blocks/photo/photo.css
+++ b/blocks/photo/photo.css
@@ -1,6 +1,7 @@
 @import url(./__like-button/photo__like-button.css);
 @import url(./__place/photo__place.css);
 @import url(./__title/photo__title.css);
+@import url(./__caption/photo__caption.css);
 
 .photo {
   background: #FFFFFF;
