--- a/blocks/photos/photos.css
+++ b/blocks/photos/photos.css
@@ -1,6 +1,7 @@
 .photos {
   margin: auto;
   max-width: 882px;
+  width: 90%;
   display: grid;
   grid-template-columns: repeat(auto-fit, 282px);
   grid-template-rows: auto;
