--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -1,7 +1,7 @@
 .popup__close-button {
   width: 60px;
   height: 60px;
-  background-image: url(../../../images/Close\ Icon.svg);
+  background-image: url(../../../images/close-button.svg);
   background-size: cover;
   position: absolute;
   top: -45px;
