--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -2,10 +2,8 @@
 @import url(./__container/popup__container.css);
 @import url(./__form/popup__form.css);
 @import url(./__heading/popup__heading.css);
-@import url(./__input-about/popup__input-about.css);
-@import url(./__input-name/popup__input-name.css);
 @import url(./__submit-button/popup__submit-button.css);
-@import url(./_opened/popup_opened.css);
+@import url(./__input/popup__input.css);
 
 
 .popup {
@@ -20,9 +18,8 @@
   align-items: center;
 }
 
-.popup_opened {
-  display: flex;
-}
+
+
 
 
 
