--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,11 +1,14 @@
 .profile__name {
   margin: 0;
-  font-family: 'Inter';
   font-style: normal;
   font-weight: 500;
   font-size: 42px;
   line-height: 56px;
   color: white;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 500px;
 }
 
 @media screen and (max-width: 700px){
