--- a/pages/index.css
+++ b/pages/index.css
@@ -1,16 +1,15 @@
+@import url(../vendor/normalize.css);
 @import url(../fonts/Inter.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/photos/photos.css);
 @import url(../blocks/photo/photo.css);
 @import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/footer/footer.css);
+@import url(../blocks/page/page.css);
 
 
-.page {
-  background-color: black;
-  font-family: 'Inter', Arial, Helvetica;
-}
 
 
 
