--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,10 +1,19 @@
 .header__logo {
   width: 142px;
   height: 33px;
+  margin-bottom: 36px;
 }
 
 @media screen and (max-width: 900px) {
   .header__logo {
     margin-left: 27px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .header__logo {
+    width: 103px;
+    height: 24px;
+    margin-bottom: 27px;
   }
 }
