--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -4,7 +4,7 @@
   border: 2px solid #FFFFFF;
   border-radius: 2px;
   margin-left: auto;
-  background-image: url(../../../images/vector2.svg);
+  background-image: url(../../../images/add-button.svg);
   background-repeat: no-repeat;
   background-position: center;
   transition: opacity 0.3s linear;
