--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,12 +1,17 @@
 .footer__copyright {
   font-style: normal;
   font-weight: normal;
-  font-size: 18px;
+  font-size: 1.125em;
   line-height: 22px;
+  margin: 0;
+  margin-bottom: 60px;
 }
 
 @media screen and (max-width: 900px) {
   .footer__copyright {
     margin-left: 27px;
+    font-size: 0.875em;
+    line-height: 17px;
+    margin-bottom: 36px;
   }
 }
