--- a/blocks/photo/__like-button/photo__like-button.css
+++ b/blocks/photo/__like-button/photo__like-button.css
@@ -1,7 +1,7 @@
 .photo__like-button {
   width: 20px;
   height: 20px;
-  background-image: url(../../../images/like.svg);
+  background-image: url(../../../images/like-button.svg);
   background-size: contain;
   object-position: center;
   border-style: none;
