--- a/blocks/photo/__title/photo__title.css
+++ b/blocks/photo/__title/photo__title.css
@@ -1,6 +1,6 @@
 .photo__title {
   font-weight: 900;
-  font-size: 24px;
+  font-size: 1.5em;
   line-height: 29px;
   margin: 0;
   margin-left: 20px;
