--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,10 +1,12 @@
 .popup__input {
   width: 358px;
   border: none;
-  border-bottom: 1px solid #000000;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   margin-bottom: 30px;
   height: 27px;
   text-overflow: ellipsis;
   width: 100%;
+  font-size: 0.875em;
+  line-height: 17px;
 }
 
