--- a/blocks/profile/__about/profile__about.css
+++ b/blocks/profile/__about/profile__about.css
@@ -2,7 +2,7 @@
   margin: 0;
   font-style: normal;
   font-weight: normal;
-  font-size: 18px;
+  font-size: 1.125em;
   line-height: 22px;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -13,6 +13,7 @@
 
 @media screen and (max-width: 700px) {
 .profile__about {
-  font-size: 14px;
+  font-size: 0.875em;
+  line-height: 17px;
 }
 }
