--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -2,15 +2,17 @@
   width: 24px;
   height: 24px;
   background-image: url(../../../images/edit-button.svg);
-  background-size: cover;
   background-color: black;
+  background-repeat: no-repeat;
+  background-position: center;
   padding: 0;
-  border: none;
+  border: 1px solid #FFFFFF;
   transition: opacity 0.3s linear;
   grid-column: 2/3;
   grid-row: 1/2;
-  align-self: center;
-  transform: translate(17px, 3px);
+  align-self: self-end;
+  margin-left: 17px;
+  margin-bottom: 13px;
 }
 
 .profile__edit-button:focus {
@@ -26,7 +28,9 @@
   .profile__edit-button {
     width: 18px;
     height: 18px;
-    right: -25px;
+    align-self: center;
+    margin-bottom: 0;
+    margin-left: 5px;
   }
 }
 
