--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,6 +1,7 @@
 .popup__input {
   width: 358px;
   border: none;
+  border-radius: 0;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   margin-bottom: 30px;
   height: 27px;
