--- a/blocks/photo/photo.css
+++ b/blocks/photo/photo.css
@@ -1,7 +1,9 @@
 @import url(./__like-button/photo__like-button.css);
+@import url(./__like-button/_active/photo__like-button_active.css);
 @import url(./__place/photo__place.css);
 @import url(./__title/photo__title.css);
 @import url(./__caption/photo__caption.css);
+@import url(./__delete-button/photo__delete-button.css);
 
 .photo {
   background: #FFFFFF;
