--- a/blocks/fading/fading.css
+++ b/blocks/fading/fading.css
@@ -1,9 +1,9 @@
 @keyframes fadeIn {
-  from { opacity: 0; }
-    to { opacity: 1; }
+  from { opacity: 0; visibility: hidden; }
+    to { opacity: 1; visibility: visible; }
 }
 
 @keyframes fadeOut {
-  from { opacity: 1; }
-    to { opacity: 0; }
+  from { opacity: 1; visibility: visible; }
+    to { opacity: 0; visibility: hidden; }
 }
