--- a/blocks/photo-popup/photo-popup.css
+++ b/blocks/photo-popup/photo-popup.css
@@ -10,7 +10,11 @@
   overflow:hidden;
   position:fixed;
   top:0px;
-  display: none;
+  opacity: 0;
+  display: flex;
+  visibility: hidden;
   justify-content: center;
   align-items: center;
+  transition: visibility 0s, opacity 0.5s linear;
 }
+
