--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -13,9 +13,11 @@
   overflow:hidden;
   position:fixed;
   top:0px;
-  display: none;
+  display: flex;
+  visibility: hidden;
   justify-content: center;
   align-items: center;
+  transition: visibility 0s, opacity 0.5s linear;
 }
 
 
