--- a/blocks/photo-popup/photo-popup.css
+++ b/blocks/photo-popup/photo-popup.css
@@ -5,16 +5,15 @@
 
 .photo-popup {
   width:100%;
-  height: 100%;
   background-color: rgba(0,0,0,0.5);
   overflow:hidden;
   position:fixed;
   top:0px;
-  opacity: 0;
-  display: flex;
-  visibility: hidden;
   justify-content: center;
   align-items: center;
-  transition: visibility 0s, opacity 0.5s linear;
+  display: flex;
+  height: 0;
+  opacity: 0;
+  transition: height 0ms 400ms, opacity 200ms 0ms;
 }
 
