--- a/blocks/popup/_opened/popup_opened.css
+++ b/blocks/popup/_opened/popup_opened.css
@@ -1,6 +1,5 @@
 .popup_opened {
-  display: flex;
+  height: 100%;
   opacity: 1;
-  visibility: visible;
-  animation: fadeIn 0.3s;
+  transition: height 0ms 0ms, opacity 200ms 0ms;
 }
