--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,12 +1,16 @@
 .popup__container {
   width: 430px;
-  height: 330px;
+  height: 350px;
   border-radius: 10px;
   background-color: white;
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.popup__container:hover {
+  cursor: default;
 }
 
 @media screen and (max-width: 515px) {
