--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,6 +1,6 @@
 .page {
   background-color: black;
-  font-family: 'Inter', Arial, Helvetica;
+  font-family: 'Inter', 'Arial', 'Helvetica', 'sans-serif';
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
