--- a/blocks/photo-popup/photo-popup.css
+++ b/blocks/photo-popup/photo-popup.css
@@ -8,7 +8,7 @@
   background-color: rgba(0,0,0,0.5);
   overflow:hidden;
   position:fixed;
-  top:0px;
+  top: 0;
   justify-content: center;
   align-items: center;
   display: flex;
