--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -15,7 +15,7 @@
   background-color: rgba(0,0,0,0.5);
   overflow:hidden;
   position:fixed;
-  top:0px;
+  top: 0;
   justify-content: center;
   align-items: center;
   display: flex;
