--- a/src/blocks/photo/photo.css
+++ b/src/blocks/photo/photo.css
@@ -4,6 +4,8 @@
 @import url(./__title/photo__title.css);
 @import url(./__caption/photo__caption.css);
 @import url(./__delete-button/photo__delete-button.css);
+@import url(./__like-container/photo__like-container.css);
+@import url(./__likes/photo__likes.css);
 
 .photo {
   background: #FFFFFF;
