--- a/src/blocks/popup/__heading/popup__heading.css
+++ b/src/blocks/popup/__heading/popup__heading.css
@@ -2,6 +2,7 @@
   color: black;
   margin: 0;
   margin-bottom: 42px;
+  margin-top: 40px;
   font-style: normal;
   font-weight: 900;
   font-size: 1.5em;
