--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,12 +1,13 @@
 .profile__avatar {
-  width: 120px;
-  height: 120px;
+  /* width: 120px;
+  height: 120px; */
   border-radius: 50%;
-  margin-right: 30px;
+  /* margin-right: 30px; */
+  /* opacity: 0.5; */
+  width: 100%;
+  height: 120px;
+  z-index: 4;
+  transition: opacity 0.2s linear;
+  opacity: 1;
 }
 
-@media screen and (max-width: 600px) {
-  .profile__avatar {
-    margin-right: 0;
-  }
-}
