--- a/src/blocks/profile/profile.css
+++ b/src/blocks/profile/profile.css
@@ -4,6 +4,8 @@
 @import url(./__edit-button/profile__edit-button.css);
 @import url(./__info/profile__info.css);
 @import url(./__name/profile__name.css);
+@import url(./__wrapper/profile__wrapper.css);
+@import url(./__avatar-container/profile__avatar-container.css);
 
 .profile {
   margin: auto;
